[package]
name = "ciso-rust"
version = "0.1.0"
authors = ["King-Coyote <alex.hartstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "^0.15"
log = "^0.4"
rlua = "0.17.0"
crossbeam-channel = "^0"
specs = "^0"